# zutils

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
include/: mpl.hpp  mpl_custom_list.hpp
include/array/: array.hpp
include/crtp_matrix/: Base.hpp  Matrix.hpp
include/mpl/: at_impl.hpp  change_impl.hpp  contains_impl.hpp  count_impl.hpp  erase_all_impl.hpp  join_impl.hpp  list_impl.hpp  meta_function.hpp  mpl_change.hpp  mpl_contains.hpp  mpl_count.hpp  mpl_erase_all.hpp  mpl_no_duplicates.hpp  mpl_push_back.hpp  mpl_reverse.hpp  mpl_size.hpp  mpl_transform.hpp  no_duplicates_impl.hpp  push_back_impl.hpp  push_front_impl.hpp  reverse_impl.hpp  size_impl.hpp  transform_impl.hpp
include/tests/: array_test.hpp  matrix_test.hpp  mpl_test.hpp  proto_test.hh  transfer_test.hpp
include/transfer/: meta_container.hpp  transfer_functions.hpp  type_wrapper.hpp
src/: main.cpp
src/tests/: mpl_at.cpp  mpl_change.cpp  mpl_contains.cpp  mpl_count.cpp  mpl_erase_all.cpp  mpl_push_back.cpp  mpl_push_front.cpp  mpl_reverse.cpp  mpl_size.cpp  mpl_transform.cpp
src/tests/array/: array.cpp
src/tests/crtp_matrix/: matrix.cpp
src/tests/mpl/: at.cpp  change.cpp  contains.cpp  count.cpp  erase_all.cpp  join.cpp  push_back.cpp  push_front.cpp  reverse.cpp  size.cpp  transform.cpp
src/tests/transfer/: transfer_functions.cpp
